--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,7 +20,7 @@
       <x>5</x>
       <y>5</y>
       <width>1271</width>
-      <height>686</height>
+      <height>696</height>
      </rect>
     </property>
     <property name="maximumSize">
@@ -30,7 +30,7 @@
      </size>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -253,25 +253,265 @@ padding:0 1px;
        </property>
       </widget>
      </widget>
-     <widget class="RealTimeCurve" name="widget" native="true">
+     <widget class="RealTimeCurve" name="rtcurve_bat_v" native="true">
       <property name="geometry">
        <rect>
         <x>400</x>
         <y>40</y>
         <width>856</width>
-        <height>241</height>
+        <height>311</height>
        </rect>
       </property>
      </widget>
-     <widget class="RealTimeCurve" name="widget_2" native="true">
+     <widget class="RealTimeCurve" name="rtcurve_bat_t" native="true">
       <property name="geometry">
        <rect>
         <x>400</x>
         <y>360</y>
         <width>856</width>
-        <height>241</height>
+        <height>286</height>
        </rect>
       </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab_3">
+     <attribute name="title">
+      <string>heater</string>
+     </attribute>
+     <widget class="QTableWidget" name="tableWidget_2">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>35</y>
+        <width>221</width>
+        <height>176</height>
+       </rect>
+      </property>
+      <row>
+       <property name="text">
+        <string>status</string>
+       </property>
+      </row>
+      <row>
+       <property name="text">
+        <string>temperature</string>
+       </property>
+      </row>
+      <row>
+       <property name="text">
+        <string>pt100 adc_code</string>
+       </property>
+      </row>
+      <row>
+       <property name="text">
+        <string>set point</string>
+       </property>
+      </row>
+      <row>
+       <property name="text">
+        <string>duty cycle</string>
+       </property>
+      </row>
+      <column>
+       <property name="text">
+        <string>heater1&amp;2</string>
+       </property>
+      </column>
+     </widget>
+     <widget class="QWidget" name="rtcurve_heater_t" native="true">
+      <property name="geometry">
+       <rect>
+        <x>265</x>
+        <y>15</y>
+        <width>996</width>
+        <height>631</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QGroupBox" name="groupBox_3">
+      <property name="geometry">
+       <rect>
+        <x>15</x>
+        <y>325</y>
+        <width>191</width>
+        <height>231</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QGroupBox{
+border-width:2px;
+border-style:solid;
+border-radius: 10px;
+border-color:gray;
+margin-top:1ex;
+}
+QGroupBox::title{
+subcontrol-origin:margin;
+subcontrol-position:top left;
+left:10px;
+margin-left:0px;
+padding:0 1px;
+}</string>
+      </property>
+      <property name="title">
+       <string>settings</string>
+      </property>
+      <widget class="QPushButton" name="pushButton_3">
+       <property name="geometry">
+        <rect>
+         <x>95</x>
+         <y>195</y>
+         <width>89</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>download</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit_2">
+       <property name="geometry">
+        <rect>
+         <x>85</x>
+         <y>85</y>
+         <width>71</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Kp</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit_3">
+       <property name="geometry">
+        <rect>
+         <x>85</x>
+         <y>120</y>
+         <width>71</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Ki</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit_4">
+       <property name="geometry">
+        <rect>
+         <x>85</x>
+         <y>155</y>
+         <width>71</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Kd</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label">
+       <property name="geometry">
+        <rect>
+         <x>55</x>
+         <y>90</y>
+         <width>26</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Kp</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_2">
+       <property name="geometry">
+        <rect>
+         <x>55</x>
+         <y>125</y>
+         <width>26</width>
+         <height>17</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Ki</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_3">
+       <property name="geometry">
+        <rect>
+         <x>55</x>
+         <y>160</y>
+         <width>26</width>
+         <height>17</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Kd</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit_5">
+       <property name="geometry">
+        <rect>
+         <x>85</x>
+         <y>50</y>
+         <width>71</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>set point</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_6">
+       <property name="geometry">
+        <rect>
+         <x>15</x>
+         <y>55</y>
+         <width>66</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>set point</string>
+       </property>
+      </widget>
+      <widget class="QRadioButton" name="radioButton">
+       <property name="geometry">
+        <rect>
+         <x>15</x>
+         <y>25</y>
+         <width>41</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>on</string>
+       </property>
+      </widget>
+      <widget class="QRadioButton" name="radioButton_2">
+       <property name="geometry">
+        <rect>
+         <x>65</x>
+         <y>25</y>
+         <width>46</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>off</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_6">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>195</y>
+         <width>66</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>upload</string>
+       </property>
+      </widget>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_2">
